# ethernet-wifi-switcher

./: README.md  install.sh  network-monitor.py  network-monitor.service  pyproject.toml  show_logs.sh  start_service.sh  uninstall.sh
