[project]
name = "crispy-fortnight"
version = "0.1.0"
description = "A new Python project."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
crispy-fortnight = "crispy_fortnight.main:main"